updated leaderboard to show top 10. fixed score spacing issue. coins now add 20 pts. reverted achievements back to proper values.

--- a/styles/app.css
+++ b/styles/app.css
@@ -9,10 +9,10 @@ html, body {
 }
 
 body {
-    display: block;
     background-image: url("https://i.ibb.co/Vx1BWrC/Chilly-Road-Background-V1-1.png");
-    background-repeat: no-repeat;
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 
     position: relative;
 }
